@@ -1,6 +1,9 @@
 Version 0.8.9
 -------------
 
+XML:    Fixed a bug in the unmarshalling of array of primitive type when using mapping.
+        (Seb <gignoux@intalio.com>)
+
 JDO:    SEQUENCE key generator for Interbase (contributed by Nic Wise <nicw@xerxes.co.nz>).
 
 JDO:    MySQL driver (contributed by Leonardo Souza Mario Bueno <leonardo@itera.com.br>).
